--- a/src/app/features/dashboard/dashboard.component.scss
+++ b/src/app/features/dashboard/dashboard.component.scss
@@ -52,7 +52,7 @@
       .coop-card {
         position: relative; /* Enable positioning for the overlay */
         background-color: #fff;
-        background-image: url('../../assets/coop-face-view-removebg-preview.png');
+        background-image: url('.././../../assets/coop-face-view-removebg-preview.png');
         background-size: cover;
         background-position: center;
         border: 1px solid #eee;
